# elk

./: Cargo.toml  gdb-elk.py
samples/: .gdb_history  autosym.py  bss  bss.asm  bss2  bss2.asm  bss3  bss3.asm  entry_point  entry_point.c  hello-dl  hello-dl.asm  hello-mov-pie  hello-nolibc  hello-nolibc.c  hello-pie  hello-pie.asm  hello.asm  ifunc-nolibc  ifunc-nolibc.c  msg.asm  nodata  nolibc  nolibc.c  puts  puts.c
samples/chimera/: .gdb_history  Makefile  bar.c  chimera  chimera.c  foo.c
samples/echidna/: Cargo.toml  build.rs
samples/echidna/src/: main.rs  support.rs
samples/glibc-symbols/: tcbhead.c
samples/twothreads/: twothreads  twothreads.c
src/: main.rs  name.rs  process.rs  procfs.rs
