[package]
name = "elk"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
custom_debug_derive = "0.6.2"
delf = { version = "0.1.0", path = "../delf" }
enumflags2 = "0.7.10"
mmap = "0.1.1"
multimap = "0.10.0"
nom = "7.1.3"
region = "3.0.2"
thiserror = "2.0.6"

[profile.dev]
debug-assertions = false
